--- a/scrapper/templates/scrapper/base.html
+++ b/scrapper/templates/scrapper/base.html
@@ -5,7 +5,7 @@
     <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Codedaddies List</title>
+        <title>Frank's Book Searcher List</title>
         <meta charset="UTF-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1"/>
         <link rel="stylesheet" href="{% static "scrapper/style.css" %}">
@@ -13,26 +13,26 @@
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     
     </head>
-    <body style="background-color: #414040">
+    <body >
         <nav>
             <div class = "container">
                 <div class="nav-wrapper">
-                    <a href="/" class="brand-logo">Price Searcher</a>
+                    <a href="/" class="brand-logo">Book Searcher </a>
                     <ul id="nav-mobile" class="right">
-                        <li><a href="/">Home</a></li>
+                        <li><a href="/">Home</a> </li>
                     </ul>
                 </div>
             </div>
         </nav>
         <div class="container">
-            <h1 style="text-align: center">Search for anything!</h1>
+            <h1 style="text-align: center">Find your favorite books!</h1>
             <div class="row">
                 <div class="col s4">
                     <!-- Promo Content 1 goes here -->
                     <div class="center">
                         <i class="large material-icons" style="color: #EE6E73">flash_on</i>
-                        <p>Fast craigslist web scraper</p>
-                        <p class="light center">Scrape away right here with a beautiful GUI.</p>
+                        <p>Fast site scraper</p>
+                        <p class="light center">Search for any book with our beautiful GUI.</p>
                     </div>
                 </div>
         
@@ -41,7 +41,7 @@
                     <div class="center">
                         <i class="large material-icons" style="color: orange">camera</i>
                         <p>Filter your searches</p>
-                        <p class="light center">We built in functionality to filter based on pricing.</p>
+                        <p class="light center">Fuctionality to filter based on pricing.</p>
                     </div>
                 </div>
         
@@ -49,8 +49,8 @@
                     <!-- Promo Content 3 goes here -->
                     <div class="center">
                         <i class="large material-icons" style="color: blue">chrome_reader_mode</i>
-                        <p>A much sexier front-end to Craigslist</p>
-                        <p class="light center">We built this with ❤️</p>
+                        <p>Find cheaper books!</p>
+                        <p class="light center">Built with ❤️</p>
                     </div>
                 </div>
 
