fix small CSS mistake in new_search.html that moved text off center

--- a/scrapper/templates/scrapper/new_search.html
+++ b/scrapper/templates/scrapper/new_search.html
@@ -4,7 +4,7 @@
 {% block content %}
 
    <h2 class="white-text text-darken-2" style="text-align: center">{{search | title}}<h2></h2>
-   <h3 class="white-text text-darken-2" style="border-bottom: 10pt;" >New Books<h3></h3>
+   <h3 class="white-text text-darken-2" style="text-align: center" >New Books<h3></h3>
 
     <div class="row">
         
