--- a/scrapper/templates/scrapper/new_search.html
+++ b/scrapper/templates/scrapper/new_search.html
@@ -40,7 +40,7 @@
                         <a  href="{{cbooks.1}}"><img src="{{cbooks.2}}" alt="{{cbooks.0}}" ></a>
                     </div>
                     <div class="card-content" style="min-height:100px" >
-                        <p class="white-text text-darken-2"  style="text-align: center" >{{cbooks.0}}</p>
+                        <p class="white-text text-darken-2"   style="font-size:13px; text-align:center" >{{cbooks.0}}</p>
                     </div>
                     <div class="card-action" style="text-align: center" style="display: justify">
                         <a class="white-text text-darken-2" href="{{cbooks.1}}">listing: ${{cbooks.3}}</a>
